--- a/css/agency.css
+++ b/css/agency.css
@@ -220,7 +220,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
-    color: #fff;
+    color: #308643;
     background-color: rgba(157, 157, 157, 0);
 }
 
